--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Sep 04 15:26:26 MDT 2015
-sdk.dir=/home/wz/android/sdk
+#Mon Jan 11 17:23:42 MST 2016
+sdk.dir=C\:\\Users\\Eric\\AppData\\Local\\Android\\sdk
